--- a/website/templates/preview.html
+++ b/website/templates/preview.html
@@ -132,7 +132,7 @@
 
       <div class="modal fade" id="buyModalBody" tabindex="-1" aria-hidden="true">
         <div
-        class="alert alert-danger alert-dismissible fade show mastercard-alert w-75"
+        class="alert alert-success alert-dismissible fade show mastercard-alert w-75"
         role="alert"
         id="preview-alert"
         >
@@ -379,7 +379,8 @@
                         <option value="⭐⭐⭐⭐⭐">⭐⭐⭐⭐⭐</option>
                       </select>
                     </div>
-                    <input type="submit" value="Submit Review" class="btn btn-dark">
+                    <input id="postCommentData" type="submit" value="Submit Review" class="btn btn-dark">
+                    <input id="editCommentData" type="submit" value="Edit Review" class="btn btn-dark editCommentBtn">
                   </form>
 
                 </div>
