--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -572,6 +572,10 @@ td {
   font-size: 20px !important;
 }
 
+.editCommentBtn {
+  display: none;
+}
+
 /* payment css */
 .payment-methods-img {
   height: 300px;
